# trirecover

./: .gitattributes  .gitignore  Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release-windows.yml
crates/carver/: Cargo.toml
crates/carver/src/: lib.rs  scanner.rs  signature.rs
crates/carver/src/validators/: bmp.rs  gif.rs  jpeg.rs  mkv.rs  mod.rs  mp4.rs  ooxml.rs  pdf.rs  png.rs  psd.rs  rar.rs  riff_avi.rs  sevenz.rs  text.rs  tiff.rs  zip.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/migrations/: 0001_init.sql
crates/core/src/: cloud.rs  config.rs  db.rs  error.rs  lib.rs  logging.rs  types.rs
crates/filesystem/: Cargo.toml
crates/filesystem/src/: lib.rs
crates/filesystem/src/exfat/: mod.rs
crates/filesystem/src/fat/: bpb.rs  dir.rs  fat.rs  mod.rs
crates/filesystem/src/ntfs/: attribute.rs  boot.rs  mft.rs  mod.rs  path.rs  runlist.rs
crates/partition/: Cargo.toml
crates/partition/src/: gpt.rs  lib.rs  mbr.rs
crates/recovery-engine/: Cargo.toml
crates/recovery-engine/src/: job.rs  lib.rs  pipeline.rs  recovery.rs  strategies.rs
crates/storage/: Cargo.toml
crates/storage/src/: drive.rs  fixture.rs  lib.rs  linux.rs  mmap.rs  sector.rs  smart.rs  windows.rs
docs/: architecture.md  build.md  file-signatures.md  threat-model.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: .gitignore  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
