[package]
name = "tr-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "TriRecover read-only raw sector I/O, drive enumeration, SMART."

[lib]
name = "tr_storage"
path = "src/lib.rs"

[dependencies]
tr-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
chrono.workspace = true
serde.workspace = true
memmap2 = "0.9"

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }
